[gd_scene load_steps=8 format=3 uid="uid://di27co10qkvt3"]

[ext_resource type="Script" path="res://fish.gd" id="1_rpa7d"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="2_qo58l"]
[ext_resource type="Texture2D" uid="uid://dn1ui5mlevr4o" path="res://art/fish/black-bass.png" id="2_qt1ok"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_kuxgs"]
friction = 0.59
bounce = 0.35

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4m0br"]
radius = 7.0
height = 28.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3bheg"]
shader = ExtResource("2_qo58l")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/enabled = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_snvvq"]
size = Vector2(15.5, 11)

[node name="Fish" type="RigidBody2D"]
z_index = 10
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_kuxgs")
gravity_scale = 0.0
lock_rotation = true
max_contacts_reported = 1
contact_monitor = true
linear_damp = 0.5
script = ExtResource("1_rpa7d")
properName = "Black Bass"
cost = 30
maxSpeed = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4m0br")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_3bheg")
texture = ExtResource("2_qt1ok")

[node name="Mouth" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="MouthPoint" type="Marker2D" parent="Mouth"]
position = Vector2(-13, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouth"]
position = Vector2(-8.75, 0.5)
shape = SubResource("RectangleShape2D_snvvq")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_shape_entered" from="Mouth" to="." method="_on_fish_mouth_body_shape_entered"]
[connection signal="mouse_entered" from="Mouth" to="." method="_on_mouth_mouse_entered"]
